# mqt-ion-shuttler

./: .gitignore  .pre-commit-config.yaml  Cycles.py  Cycles_new.py  Debugged_benchmark_results.txt  LICENSE  README.md  SAT.py  compilation.py  draw_state.py  ghz_benchmark_results.txt  graph_state_benchmark_results.txt  graph_utils.py  graph_utils_new.py  mid_benchmark_results.txt  partition.py  plotting.py  pyproject.toml  qft.txt  results.txt  run.py  run_benchmarks.py  run_exact.py  run_heuristic.py  run_heuristic_qft.py  scheduling.py
.github/workflows/: python.yml
QASM_files/: full_register_access_06.qasm  full_register_access_140.qasm  full_register_access_50.qasm  full_register_access_70.qasm  ghz_nativegates_quantinuum_tket_50.qasm  graphstate_nativegates_quantinuum_qiskit_opt3_50.qasm  qft_12qubits.qasm  qft_17qubits.qasm  qft_20qubits.qasm  qft_24qubits.qasm  qft_30qubits.qasm  qft_62qubits.qasm  qft_6qubits.qasm  qft_8qubits.qasm  qft_90qubits.qasm  qft_nativegates_quantinuum_qiskit_opt3_6.qasm  qft_nativegates_quantinuum_tket_3.qasm  qft_nativegates_quantinuum_tket_3_short.qasm
QASM_files/GHZ/: ghz_nativegates_quantinuum_tket_10.qasm  ghz_nativegates_quantinuum_tket_100.qasm  ghz_nativegates_quantinuum_tket_101.qasm  ghz_nativegates_quantinuum_tket_102.qasm  ghz_nativegates_quantinuum_tket_103.qasm  ghz_nativegates_quantinuum_tket_104.qasm  ghz_nativegates_quantinuum_tket_105.qasm  ghz_nativegates_quantinuum_tket_106.qasm  ghz_nativegates_quantinuum_tket_107.qasm  ghz_nativegates_quantinuum_tket_108.qasm  ghz_nativegates_quantinuum_tket_109.qasm  ghz_nativegates_quantinuum_tket_11.qasm  ghz_nativegates_quantinuum_tket_110.qasm  ghz_nativegates_quantinuum_tket_111.qasm  ghz_nativegates_quantinuum_tket_112.qasm  ghz_nativegates_quantinuum_tket_113.qasm  ghz_nativegates_quantinuum_tket_114.qasm  ghz_nativegates_quantinuum_tket_115.qasm  ghz_nativegates_quantinuum_tket_116.qasm  ghz_nativegates_quantinuum_tket_117.qasm  ghz_nativegates_quantinuum_tket_118.qasm  ghz_nativegates_quantinuum_tket_119.qasm  ghz_nativegates_quantinuum_tket_12.qasm  ghz_nativegates_quantinuum_tket_120.qasm  ghz_nativegates_quantinuum_tket_121.qasm  ghz_nativegates_quantinuum_tket_122.qasm  ghz_nativegates_quantinuum_tket_123.qasm  ghz_nativegates_quantinuum_tket_124.qasm  ghz_nativegates_quantinuum_tket_13.qasm  (+99 more)
algorithms/: full_register_access.json  qft_05.json  qft_06.json  qft_07.json  qft_08.json
algorithms_exact/: full_register_access.json  qft_06.json
algorithms_heuristic/: full_register_access_06.json  full_register_access_50.json  qft_05_2pzs.json  qft_06_1pz.json  qft_06_2pzs.json  qft_12.json  qft_24.json  qft_6.json  qft_60_4pzs.json
results/: paths_junctions_2jct.txt  paths_junctions_3jct.txt  paths_junctions_4jct.txt  paths_junctions_5jct.txt  paths_junctions_6jct.txt  paths_junctions_7jct.txt
(+575 files in other folders)
