[build-system]
requires = ["setuptools>=58.0.0", "wheel"]  # Build-time dependencies
build-backend = "setuptools.build_meta"     # Specifies Setuptools as the build backend
# backend-path = ["."]

[project]
name = "mqt.ionshuttler"
version = "0.1"
description = "A solver for the shuttling problem in QCCD quantum computers"
readme = "README.md"
authors = [
    { name = "Daniel Schoenberger", email = "daniel.schoenberger@tum.de"}
]
keywords = ["MQT", "quantum computing", "compilation", "shuttling", "design automation", "sat solver"]
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = [
    "z3-solver==4.12.1.0",
    "matplotlib==3.7.1",
    "networkx==3.0",
    "qiskit==1.0.0",
    "more_itertools==10.1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages    = {find = {where = ["src"], include = ["mqt*"], namespaces = true}}
py-modules  = []

[tool.ruff]
select = [
    "E", "F", "W", # flake8
    "A",            # flake8-builtins
    "ARG",          # flake8-unused-arguments
    "B", "B904",    # flake8-bugbear
    "C4",           # flake8-comprehensions
    "EM",           # flake8-errmsg
    "EXE",          # flake8-executable
    "I",            # isort
    "ICN",          # flake8-import-conventions
    "ISC",          # flake8-implicit-str-concat
    "N",            # flake8-naming
    "PGH",          # pygrep-hooks
    "PIE",          # flake8-pie
    "PL",           # pylint
    "PT",           # flake8-pytest-style
    "PTH",          # flake8-use-pathlib
    "PYI",          # flake8-pyi
    "Q",            # flake8-quotes
    "RET",          # flake8-return
    "RSE",          # flake8-raise
    "RUF",          # Ruff-specific
    "SIM",          # flake8-simplify
    "TCH",          # flake8-type-checking
    "TID",          # flake8-tidy-imports
    "TRY",          # tryceratops
    "UP",           # pyupgrade
    "YTT"           # flake8-2020
]
ignore = [
    "E501",     # Line too long (Black is enough)
    "PLR2004",  # Magic values
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "SIM105",   # Use `contextlib.suppress(ValueError)` instead of try-except-pass
]
target-version = "py38"

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "extern",
]

line-length = 120

[tool.black]
line-length = 120

[tool.ruff.per-file-ignores]
"src/mqt/ionshuttler/single_shuttler/*" = ["ALL"]
"src/mqt/ionshuttler/multi_shuttler/Inside/*" = ["ALL"]